# ncpu-bridge

./: .gitignore  LICENSE  README.md  WHITEPAPER.md  pyproject.toml
benchmarks/: README.md  bench_alu.py  bench_modules.py  bench_scaling.py  results_alu.md  results_modules.md  results_scaling.md
bridge/: __init__.py  __main__.py  auto_tune.py  c_compiler.py  cli.py  compute.py  config.py  feedback_loop.py  hailo_backend.py  hailo_deploy.py  health.py  local_heartbeat.py  neural_arm64_real.py  neural_assembler_real.py  neural_audio.py  neural_bench.py  neural_bloom.py  neural_cache_real.py  neural_compress.py  neural_container.py  neural_crypto.py  neural_db.py  neural_debugger.py  neural_dns.py  neural_elf.py  neural_event_loop.py  neural_float.py  neural_forth.py  neural_fs.py  neural_gc.py  neural_gfx.py  neural_gic_real.py  neural_hash.py  neural_http.py  neural_hypervisor.py  neural_ipc.py  neural_jit.py  neural_kernel.py  neural_linker.py  neural_math_real.py  (+20 more)
demos/: README.md  full_stack.py  kernel_boot.py  neural_mesh_demo.py  self_host.py
docs/: ARCHITECTURE.md  BENCHMARKS.md
exported_models/: compile_hailo.sh
paper/: blog-post.md  paper.html  paper.tex  style.css
scripts/: download_models.sh  setup-hailo-pi.sh
server/: benchmark.py  deploy-bravo.sh  ecosystem.config.cjs  mesh_node.py  server.py
tests/: test_cli.py  test_compute.py  test_health.py  test_obligations.py
verification/: VERIFICATION_REPORT.md  cross_substrate_verify.py  fault_tolerance.py  fault_tolerance_report.md  formal_verify.py  pi_onnx_verify.py  pu2_verify.py
(+28 files in other folders)
