[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ncpu-bridge"
version = "0.1.0"
description = "Bridge for Skynet to offload computations to nCPU's verified neural ALU"
requires-python = ">=3.10"
dependencies = ["torch"]

[project.scripts]
ncpu-bridge = "bridge.cli:main"
